# challenge_mcp_vulns

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agent/: guardrails.py  main.py  protected.py  protected_hook.py  protected_telemetry.py  vulnerable.py
data/: sample_base.json
mcp/: client.py  mail_client.py  main.py
red_teaming/: gpt_prompt_extraction.md
